# clode

./: README.md  pyproject.toml  setup.cfg  setup.py
clode/: __init__.py  clode.ps1  clode.py  command_line.py  search.py
