[project]
name = 'clode'
version = '0.1.0'
description = 'CLI tool to open git repositories quickly'
readme = 'README.md'
license = { file = 'LICENSE' }
authors = [{ name = 'Oli', email = 'oli@olillin.com' }]
maintainers = [{ name = 'Oli', email = 'oli@olillin.com' }]

classifiers = [
    'Development Status :: 3 - Alpha',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3',
]

dependencies = ['colorama']

[project.urls]
"Bug Reports" = "https://github.com/olillin/RepoChecker/issues"
"Source" = "https://github.com/olillin/RepoChecker"

[build-system]
requires = ['setuptools']
build-backend = 'setuptools.build_meta'

[project.scripts]
repochecker = 'repochecker:main'
